<resources>
    <string name="app_name">Погода</string>
    <string name="greeting">Hello World!</string>

    <string name="greeter">Пользователь</string>
    <string name="now">Сейчас</string>
    <string name="goodMorning">Доброе утро</string>
    <string name="goodAfternoon">Добрый день</string>
    <string name="goodEvening">Добрый вечер</string>
    <string name="goodNight">Доброй ночи</string>

    <string name="city">Москва</string>
    <string name="weatherValue">+99°</string>
    <string name="weatherType">облачно</string>

    <string name="cityFieldHint">Город</string>
    <string name="nameFieldHint">Имя</string>
    <string name="edit">Редактировать</string>
    <string name="Submit">Отправить</string>
    <string name="empty">Пусто</string>

    <string name="toastEmptyForm">Пожалуйста заполните все поля</string>
    <string name="toastBackText">Для выхода нажмите еще раз</string>

    <string name="toFavorite">избранное</string>
    <string name="name">Имя</string>
    <string name="type">Тип</string>
    <string name="typePic">Тип изображение</string>
    <string name="wind">Ветер</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="logo">Логотип</string>
</resources>
