<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/v_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </View>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:columnCount="2"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:gravity="right"
            android:width="150dp"
            />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_gravity="left|center_vertical"
            />

        <Switch
            android:id="@+id/sw_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="true" />

        <TextView
            android:id="@+id/tv_typePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typePic"
            android:layout_gravity="left|center_vertical"
            />

        <Switch
            android:id="@+id/sw_typePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="true" />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_gravity="left|center_vertical"
            />

        <Switch
            android:id="@+id/sw_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:layout_gravity="left|center_vertical"
            />

        <Switch
            android:id="@+id/sw_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_gravity="left|center_vertical"
            />

        <Switch
            android:id="@+id/sw_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            />
    </GridLayout>
</android.support.constraint.ConstraintLayout>